fix: hide toolbar items when collapsed

--- a/app/src/assets/pages/home.less
+++ b/app/src/assets/pages/home.less
@@ -451,6 +451,10 @@
   transition: 0.25s;
 
   &.stacked {
+    .toolbar-item {
+      display: none;
+    }
+
     @media (orientation: landscape) {
       width: 0;
       padding-left: 0;
